--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Website :)</title>
         <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
         <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
@@ -31,6 +32,7 @@
                         hx-target="#add-item" 
                         hx-swap="beforeend" 
                         hx-indicator="#add-item-loading" 
+                        autocomplete="off"
                         class="form-group m-2"
                     >
                         <label for="add-item-name" class="form-label">Item</label>
