--- a/templates/item.html
+++ b/templates/item.html
@@ -1,1 +1,13 @@
-<li>{{ . }}</li>
+<div class="input-group my-2">
+    <span class="input-group-addon">{{ . }}</span>
+    <button class="btn btn-primary btn-action btn-lg input-group-btn"
+        hx-get="/delete-item"
+        hx-target="closest div"
+        hx-swap="delete"
+    >
+        <i class="icon icon-cross">
+            ::before
+            ::after
+        </i>
+    </button>
+</div>
